# ctdms

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
build_asan/: Makefile  example_read  test_ctdms
examples/: example_read.c
include/ctdms/: ctdms.h
src/: ctdms.c  ctdms_internal.h  ctdms_io.c  ctdms_parse.c
tests/: test_ctdms.c
